app/src/styles/scss/style.scss
@import './nullify.scss';
@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap');


/* 320 - 375 - 450 */
$mobile-width-small: 320px; 
$mobile-width-big: 375px; 
/* 450 - 768 - 1024 */
$tablet-width: 450px;
/* 1024 */
$laptop-width: 1024px; 

@mixin circle-borders {
  border-radius: 7px;
  overflow: hidden;
}

%title-font {
  font-size: 2.2rem;
  font-weight: 700;
}

%section-sizes-mobile {
  min-height: 510px;
  padding: 2.5rem;
  padding-bottom: 0; /*60vh*/
}

@mixin section-sizes-mobile-big {
  max-height: 585px;
}

@mixin section-sizes-tablet {
  padding-bottom: 0; /*540*/ /*DONE*/
}

@mixin section-sizes-laptop {
  flex: 0 0 50%;
}


body {
  font-family: 'Roboto', sans-serif;

  background-image: url('../assets/images/Background.png');
  background-size: cover;
  background-repeat: no-repeat;
  background-position: center;
  background-attachment: fixed;
}

.signup {
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  
  max-width: 450px;
  height: 100%;
  

  background-color: rgb(255, 255, 255);
  box-shadow: .5px .5px 3rem 1.5px rgba(0, 0, 0, 0.5);


  @media (min-width: $tablet-width) {
    height: auto;
    margin: 1vh auto;

    border-radius: 0px 0px 7px 7px;
  }
  
  @media (min-width: $laptop-width) {
    flex-direction: row;
    max-width: 900px;
    margin: 3rem auto;

    @include circle-borders;
  }


  .signup-preview {
    @extend %section-sizes-mobile;


    background-color: rgb(1,50,67);
    background-image: url('../assets/images/iPhone Mockup.png');
    background-repeat: no-repeat;
    background-position: bottom center;
    background-size: 120% auto;

    color: white;
    text-align: center;
    line-height: 1.5rem;

    border-bottom: .5px solid whitesmoke;


    @media (min-width: $mobile-width-big) {
      @include section-sizes-mobile-big;


      background-size: 450px auto;
    }

    @media (min-width: $tablet-width) {
      @include section-sizes-tablet;
    }

    @media (min-width: $laptop-width) { 
      @include section-sizes-laptop;


      border: none;
    }

    .signup-preview-content {
      &__title {
        padding-bottom: .7rem;


        @extend %title-font;
      }

      &__description {
        opacity: .5;
      }
    }
  }
}


.signup-body {
  @extend %section-sizes-mobile;


  background-color: rgb(255, 255, 255);


  @media (min-width: $mobile-width-big) {
    @include section-sizes-mobile-big;
  }

  @media (min-width: $tablet-width) {
    padding-right: 4.5rem;
    padding-left: 4.5rem;
    @include section-sizes-tablet
  }

  @media (min-width: $laptop-width) { 
    @include section-sizes-laptop;
  }


  .signup-body-content {
    &__title {
      padding-bottom: 2.2rem;


      @extend %title-font;
    }

    &__form {
      font-weight: 600;

      input:not([type=checkbox]) {
        display: block;
        width: 100%;
        padding: 1.2rem 1rem;
        margin-top: .55rem;


        border: .5px solid gray;
        @include circle-borders;
      }

      input:focus, button:focus {
        box-shadow: .2px .2px 1rem 3px rgba(124, 159, 224, 0.5);
      }

      &-section {
        padding-bottom: 1.7rem;
      }

      .conditions {
        display: flex;
        align-items: baseline;

        label {
        display: inline-block;
        width: 85%;
        padding-left: .5rem;


        font-weight: 500;
        line-height: 1.45rem;

          @media (min-width: $mobile-width-big) {
            width: 68%;
          }

          @media (min-width: $tablet-width) {
            width: 75%;
          }
        }
        
        a {
          font-weight: 600;
          color: rgb(1,50,67);
          text-decoration: underline;
        }
      }

      &-btn {
        width: 100%;
        padding: 1.2rem 1rem;


        background-color: rgb(1,50,67);
        color: rgb(255,255,255);
        font-weight: 600;

        @include circle-borders;
      }
    }
  }
}

footer {
  height: 1px;
}

